# k_means

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  test.yml
data/: results.xlsx  sample.csv
data/archive/: aggregated_solution_outcomes.txt
data/batches/: batch_gams_gurobi_no_mode_2025-06-29_21-21-57.txt  finish.txt  k_means_96.txt
data/models/: model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim2_clusters3_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim2_clusters3_points20_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim2_clusters5_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim2_clusters5_points20_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim3_clusters3_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim3_clusters3_points20_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim3_clusters5_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim3_clusters5_points20_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim5_clusters3_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim5_clusters3_points20_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim5_clusters5_points10_1.pkl  model_gams_gurobi_no_mode_2025-06-29_21-21-57_dim5_clusters5_points20_1.pkl  (+96 more)
main/: aggregate_solution_outcomes.py  batch_run.py  clean_archive_plots.py  copy_specific_plots.py  generate_plots.py  k_means.py  output.txt  process_archives.py  run.sh  solve.py  solve_old.py  try.py
src/starter_repo/: plot_data.py
starter_repo/: __init__.py  plot_data.py
tests/: test_plot_data.py
(+9281 files in other folders)
