[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["starter_repo"]

[project]
name = "starter-repo"
version = "0.1.0"
authors = [
    { name="Graham Neubig", email="neubig@gmail.com" },
]
description = "A starter repository demonstrating Python best practices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]